[tool.poetry]
name = "als-dj"
version = "0.1.0"
description = ""
authors = ["Anton Skvortsov <askvrtsv@icloud.com>"]
readme = "README.md"
packages = [{include = "als_dj"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pyairtable = "^1.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
